<resources>
    <string name="app_name">AmazingLabyrinth</string>
    <string name="select_level">Choose Level</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="about">About</string>
    <string name="unknown">Unknown</string>
    <string name="none">None</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="save">Save</string>

    <string name="gameInfo">Game Information</string>
    <string name="gameName">Game:</string>
    <string name="developer">Developer:</string>
    <string name="developerName">Cerulean Quasar</string>
    <string name="graphics">Graphics Information:</string>
    <string name="graphicsAPI">API:</string>
    <string name="version">Version:</string>
    <string name="graphicsDriverInfo">Device:</string>
    <string name="graphicsDriverKnownIssues">Driver known issues:</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="hasAccelerometer">Device has Accelerometer:</string>
    <string name="cpu">CPU type:</string>
    <string name="cpuType32Bit">32 Bit</string>
    <string name="cpuType64Bit">64 Bit</string>

    <string name="thirdPartyThanks">Many thanks to the following third party libraries this project uses:</string>
    <string name="thirdPartyGlm">GLM</string>
    <string name="thirdPartyJsonForCpp">JSON for Modern C++</string>
    <string name="thirdPartyBoost">Boost</string>
    <string name="thirdPartyTinyObjLoader">tinyobjloader</string>
    <string name="thirdPartyStbImage">STB</string>
    <string name="thirdPartyVulkanMemoryAllocator">Vulkan Memory Allocator</string>
    <string name="thirdPartyLibcbor">libcbor</string>

    <string name="license">License:</string>
    <string name="licenseMIT">MIT License</string>
    <string name="licenseCreativeCommons">Creative Commons Zero\nv1.0 Universal</string>
    <string name="licenseBoost">Boost License</string>
    <string name="licenseGnu3">GNU General Public License 3</string>

    <string name="thirdPartyThanksTools">Many thanks to the following third party tools this project uses:</string>
    <string name="thirdPartyGimp">GIMP</string>
    <string name="thirdPartyBlender">Blender</string>
    <string name="thirdPartyPngquant">pngquant</string>
    <string name="thirdPartyXcf2png">xcf2png</string>

    <string name="settings">Settings</string>
    <string name="tryVulkan">Try Vulkan if available</string>
    <string name="useShadows">Enable Shadows</string>
</resources>
